--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,6 +1,6 @@
 body, html {
     background-color: #f4f4f4;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: sans-serif!important;
 }
 
 *:focus {
